--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-ignition": "^2.9",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
@@ -17,8 +18,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^10.5",
-        "spatie/laravel-ignition": "^2.4"
+        "phpunit/phpunit": "^10.5"
     },
     "autoload": {
         "psr-4": {
